# modern-cmake-project-tree

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml  cmake.yml
LibA/: CMakeLists.txt  backup  liba.cpp  liba.h
